Changes

from version 0.997.1 to 0.998

improvement:
- it is now possible to automatically recalibrate after a pump steps of choice


from version 0.997 to 0.997.1

bugfixes:
- fix buffer overflow for long SIX measurements
- fix enabling state of valve controls


from version 0.996 to 0.997

improvement:
- it is now possible to control up to 8 valves in a setup
  (by outputting 3.3 V to the valve controller)

bugfix:
- the pumps 5-8 in step 1 were by default disabled


from version 0.995.1 to 0.996

bugfixes:
- fix the Free Pumps functionality
- when the USB connection to the driver was lost, the software could be in a
  state where it could no longer readout the firmware version after reconnecting


from version 0.995 to 0.995.1

compilation:
- Win32 builds are now available
- since this release at least Lazarus 2.2 is necessary to compile


from version 0.994 to 0.995

improvements:
- it is now possible to change the time unit in the sensro data chart
  via the context menu (right-click into the chart)
- with a right-click on the Sensor Data File field it is possible
  to change it and this way trigger a new data acquisition run
- always display current channel value, independent if channel is shown in chart

bugfixes:
- fix crash on unloading a .def file for IV4 sensors
- fix a minor UI issue in the pump control tab
- hide the Windows-specific context menu for some UI fields


from version 0.993 to 0.994

improvements:
- when changing the unit of the displayed diagram values to nA or mmol/l
  all diagram values will be recalculated to this unit
  (the CSV output file will not be recalculated since it
   already contains the values in both units)

bugfixes:
- fix bug on calculating sensor value from readout data
- correct info in some error messages


from version 0.992 to 0.993

improvements:
- display the SIX ID number below the connected port
- it is now possible to set a time down to 0.05 s per pump action step

bugfixes: